error/src/main/java/com/example/error/exception/UnauthorizedException.kt
package com.example.error.exception

class UnauthorizedException(e: Throwable) : RuntimeException(e)